fix: remove flex gap in route picker

--- a/assets/css/_route_picker.scss
+++ b/assets/css/_route_picker.scss
@@ -2,8 +2,11 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
   min-height: 0;
+
+  & > :not(:last-child) {
+    margin-bottom: 1rem;
+  }
 }
 
 .m-route-picker__label {
@@ -30,10 +33,13 @@
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
 
     li {
       position: relative;
+
+      &:not(:last-child) {
+        margin-bottom: 0.5rem;
+      }
     }
   }
 
